--- a/bootstrap-sandbox-start/25-spinners.html
+++ b/bootstrap-sandbox-start/25-spinners.html
@@ -12,26 +12,56 @@
       <h1 class="mb-5">Spinners</h1>
 
       <!-- Border Spinner -->
+      <div class="spinner-border" role="status">
+        <spin class="visually-hidden">Loading...</spin>
+      </div>
 
       <br /><br />
 
       <!-- Colors -->
+      <div class="spinner-border text-warning" role="status">
+        <spin class="visually-hidden">Loading...</spin>
+      </div>
 
       <br /><br />
 
       <!-- Growing Spinner -->
+      <div class="spinner-grow text-danger" role="status">
+        <spin class="visually-hidden">Loading...</spin>
+      </div>
 
       <br /><br />
 
       <!-- Align Center -->
+      <div class="d-flex justify-content-center">
+        <div class="spinner-border" role="status">
+          <spin class="visually-hidden">Loading...</spin>
+        </div>
+      </div>
 
       <br /><br />
 
       <!-- Size -->
+      <div class="spinner-border spinner-border-sm" role="status">
+        <spin class="visually-hidden">Loading...</spin>
+      </div>
+      <br /><br />
 
+      <div class="spinner-grow spinner-grow-sm text-danger" role="status">
+        <spin class="visually-hidden">Loading...</spin>
+      </div>
+      <br /><br />
+
+      <div class="spinner-border" role="status" style="height: 5rem; width: 5rem;">
+        <spin class="visually-hidden">Loading...</spin>
+      </div>
       <br /><br />
 
       <!-- In Buttons -->
+      <button class="btn btn-primary">
+        <span class="spinner-border spinner-border-sm"></span>
+        Loading...
+      </button>
 
       <!-- Don't go past here -->
     </div>
