--- a/bootstrap-sandbox-start/26-modals.html
+++ b/bootstrap-sandbox-start/26-modals.html
@@ -13,9 +13,37 @@
       <h1 class="mb-5">Modal</h1>
 
       <!-- Modal Button -->
-      <button type="button" class="btn btn-primary">Open Modal</button>
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#myModel"
+      >
+        Open Modal
+      </button>
 
       <!-- Modal -->
+      <div class="modal fade" id="myModel">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="myModalLabel">Modal Title</h1>
+              <button class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quo
+              error veritatis reprehenderit voluptate quia voluptates mollitia.
+              Repellat iste architecto saepe iusto et quam vero, quaerat
+              blanditiis alias inventore totam soluta, nulla consectetur?
+              Perferendis aspernatur alias esse laboriosam cum assumenda.
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button class="btn btn-primary">Save Changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- Don't go past here -->
     </div>
