Update bootstrap-sandbox-start/28-darkmode-toggle.html file

--- a/bootstrap-sandbox-start/28-darkmode-toggle.html
+++ b/bootstrap-sandbox-start/28-darkmode-toggle.html
@@ -11,6 +11,23 @@
   <body>
     <div class="container">
       <h1 class="mb-5">Toggle Dark Mode</h1>
+      <div class="card mb-4" style="width: 18rem">
+        <div class="card-header">This is a Card</div>
+        <div class="card-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sit
+          autem ipsa aperiam cum! Expedita cupiditate commodi eum magnam. Labore
+          autem, odio iste cupiditate cumque tempore nihil dignissimos maiores
+          quaerat saepe consequatur sed sequi. Architecto delectus iusto natus
+          voluptates quidem?
+        </div>
+      </div>
+
+      <button class="btn btn-dark" data-bs-theme-value="dark">
+        Enable Dark Mode
+      </button>
+      <button class="btn btn-light" data-bs-theme-value="light">
+        Enable Light Mode
+      </button>
 
       <!-- Don't go past here -->
     </div>
