Update mini-projects/Users-List/index.html file

--- a/mini-projects/Users-List/index.html
+++ b/mini-projects/Users-List/index.html
@@ -56,7 +56,7 @@
     <main class="container">
       <!-- Row 1 -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div
             class="card mb-3"
             data-bs-container="body"
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div
             class="card mb-3"
             data-bs-container="body"
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div
             class="card mb-3"
             data-bs-container="body"
@@ -143,11 +143,8 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Row 2 -->
-      <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div
             class="card mb-3"
             data-bs-container="body"
@@ -176,7 +173,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div
             class="card mb-3"
             data-bs-container="body"
@@ -205,7 +202,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div
             class="card mb-3"
             data-bs-container="body"
@@ -234,6 +231,11 @@
           </div>
         </div>
       </div>
+
+      <!-- Row 2 -->
+      <!-- <div class="row"> -->
+
+      <!-- </div> -->
     </main>
     <script src="../../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/js/darkmodetoggle.js"></script>
